tried fix video and scrollbar

--- a/source/sass/blocks/partners.scss
+++ b/source/sass/blocks/partners.scss
@@ -58,6 +58,14 @@
         flex-wrap: nowrap;
         overflow: auto;
         padding: 0 20px 0 20px;
+        scrollbar-width: none;
+
+        &::-webkit-scrollbar {
+          -webkit-appearance: none;
+          width: 0;
+          height: 0;
+          display: none;
+      }
       }
     }
 
