--- a/source/sass/utils/global.scss
+++ b/source/sass/utils/global.scss
@@ -11,9 +11,6 @@ html {
 
 }
 
-::-webkit-scrollbar {
-  -webkit-appearance: none;
-}
 
 * {
   cursor: none !important;
